# cpp_template

./: .clang-format  CMakeLists.txt  README.md
scripts/: compile.ps1  run.bat  run.ps1
